--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
-    "express": "^4.16.4",
+    "connect-flash": "^0.1.1",
+    "express": "^4.18.2",
     "express-handlebars": "^3.0.0",
+    "express-session": "^1.17.3",
     "mongoose": "^5.9.7",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0"
