--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.2",
     "express-handlebars": "^3.0.0",
     "express-session": "^1.17.3",
+    "method-override": "^3.0.0",
     "mongoose": "^5.9.7",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0"
